Fix datepicker days layout bug

--- a/css/forms.css
+++ b/css/forms.css
@@ -592,7 +592,7 @@ datepicker {
 }
 ._720kb-datepicker-calendar-day {
     float: left;
-    width: 12.2%;
+    width: 14.2%;
     padding: 5px;
     box-sizing: border-box;
     &._720kb-datepicker-active,
